syntax = "proto3";

package product;

option go_package = "product-service/pkg/gen/product;productpb";

import "google/protobuf/empty.proto";

service ProductService {
  rpc Create (CreateRequest) returns (ProductResponse);
  rpc Get (ProductRequest) returns (ProductResponse);
  rpc GetAll (google.protobuf.Empty) returns (ProductListResponse);
  rpc Update (UpdateRequest) returns (ProductResponse);
  rpc Decrease (DecreaseRequest) returns (ProductResponse);
  rpc Delete (ProductRequest) returns (google.protobuf.Empty);
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message ProductResponse {
  Product product = 1;
}

message ProductListResponse {
  repeated Product products = 1;
}

message ProductRequest {
  string id = 1;
}

message CreateRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message UpdateRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message DecreaseRequest {
  string id = 1;
  int32 quantity = 2;
}
